--- a/index.html
+++ b/index.html
@@ -161,11 +161,43 @@
     <p class="sans-serif">sans-serif</p>
     <p class="monospace">monospace</p>
     <p class="cursive">cursive</p>
-    <p class="fantasy">fantasy</p>
+    <p class="fantasy">fantasy</p
     <p class="italic">italic</p>
     <p class="oblique">oblique</p>
     <p class="thin">thin</p>
     <p class="bold">bold</p>
     <h4 class="small">small</h4>
     <h4 class="big">big</h4>
+
+    <!-- 26 -->
+
+    <div class="inline-box">a</div>
+    <div class="inline-box">b</div>
+    <div class="inline-box">c</div>
+
+    <span class="block">teste</span>
+    <span class="block">teste2</span>
+
+    <p class="invisible">Me encontre se puder</p>
+    <div class="static"><span>Eu sou estátco</span></div>
+    <div class="relative">Eu sou relativo</div>
+    <p>Eu sou um parágrafo</p>
+
+    <div class="absolute">
+        <span>Eu sou absoluto</span>
+    </div>
+
+    <div class="relative-container">
+        <div class="absolute"></div>
+        <div class="absolute-2"></div>
+    </div>
+    <div class="fixed">
+        <span>Eu sou fixo</span>
+    </div>
+    <div class="relative-container">
+        <div class="absolute-3"></div>
+        <div class="absolute-4"></div>
+        <div class="absolute-5"></div>
+    </div>
+
 </html>
